Fixed the looping logic, now it works. Also started working on the category collapsing.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2,7 +2,7 @@
 /*Need to hit shift f5 to reset browser cache*/
 .row {
     display: flex;
-    align-items: baseline;
+    align-items:flex-start;
     gap: 10px;
 }
 
